@@ -1,4 +1,9 @@
+ZIPSET=zapret
 ZIPLIST=$EXEDIR/zapret-ip.txt
 ZIPLIST_USER=$EXEDIR/zapret-ip-user.txt
-ZIPSET=zapret
 ZUSERLIST=$EXEDIR/zapret-hosts-user.txt
+
+ZIPSET_IPBAN=ipban
+ZIPLIST_IPBAN=$EXEDIR/zapret-ip-ipban.txt
+ZIPLIST_USER_IPBAN=$EXEDIR/zapret-ip-user-ipban.txt
+ZUSERLIST_IPBAN=$EXEDIR/zapret-hosts-user-ipban.txt
