@@ -1,0 +1,2 @@
+kinozal.tv
+rutracker.org
